tests/whiley/invalid/test_179.wyal
define f_loopinvariant_9(int i) is:
    i >= 0


assert "loop invariant not restored":
    forall(int v, int i$3, int i$1, int i, int i$2):
        if:
            i == 0
            f_loopinvariant_9(i$1)
            i$1 < 100
            i$2 == (i$1 - 1)
            i$2 != v
            i$3 == (i$2 + 2)
        then:
            f_loopinvariant_9(i$3)


